# skilldo

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  BACKLOG.md  BEST_PRACTICES.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  README.md  SKILL.md  THIRD-PARTY-LICENSES.html  about.toml  cliff.toml  codecov.yml
.cargo/: audit.toml
.github/: dependabot.yml  e2e-config.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
dev/bad-outputs/: claude-sonnet-keras-SKILL.md  claude-sonnet-pydantic-SKILL.md  claude-sonnet-scikit-learn-SKILL.md  claude-sonnet-scipy-SKILL.md  gpt52-click-SKILL.md  gpt52-cryptography-SKILL.md  gpt52-flask-SKILL.md  gpt52-requests-SKILL.md  hybrid-qwen-gpt52-pandas-SKILL.md  hybrid-qwen-gpt52-transformers-SKILL.md  qwen3-coder-arrow-SKILL.md
dev/scripts/: RUN_OVERNIGHT.sh  batch-compare.sh  batch-generate.sh  batch-top25.sh  migrate-config.sh  pr-triage.sh  reply-reviewer.sh  test-models.sh
docs/: README.md  add-language-checklist.md  architecture.md  authentication.md  best-practices.md  configuration.md  languages.md  telemetry.md
examples/configs/: anthropic.toml  api-gateway.toml  chatgpt-codex.toml  deepseek.toml  github-models.toml  hybrid.toml  ollama.toml  openai.toml  per-agent-extra-body.toml  reference.toml  sample.toml
examples/skills/: README.md  aiohttp-SKILL.md  arrow-SKILL.md  boto3-SKILL.md  (+24 more)
src/: changelog.rs  config.rs  detector.rs  error.rs  git.rs  lib.rs  lint.rs  main.rs  telemetry.rs  util.rs  validator.rs
tests/: INTEGRATION_TEST_COVERAGE.md  TEST_COVERAGE_SUMMARY.md  agent5_integration_test.rs  changelog_analysis_test.rs  collector_test.rs  config_test.rs  executor_error_test.rs  lint_print_test.rs  lint_test.rs  python_handler_test.rs  test_adversarial_linter.rs  test_agent_integration.rs  test_collector.rs  test_dual_validation.rs  test_ecosystem_integration.rs  test_error_handling.rs  test_file_prioritization.rs  test_fixture_pipeline.rs  test_generator.rs  test_generator_comprehensive.rs  test_integration.rs  test_license_toml_table.rs  test_linter.rs  test_llmposter.rs  test_prompts.rs  test_python_handler.rs  test_python_metadata.rs  test_version_override.rs  validator_error_test.rs  validator_test.rs
(+132 files in other folders)
