[package]
name = "skilldo"
version = "0.1.6"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
async-trait = "0.1"
dirs = "6"
tempfile = "3"
regex = "1"

[dev-dependencies]
mockito = "1"

[profile.release]
overflow-checks = true
