[package]
name = "skilldo"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
dirs = "6"
tempfile = "3"
regex = "1"
once_cell = "1"
base64 = "0.22"
boreal = "1.1.0"
git2 = "0.20"
auth-git2 = "0.5"
libgit2-sys = { version = "0.18", features = ["vendored"] }

[dev-dependencies]
mockito = "1"

[profile.release]
overflow-checks = true
