[package]
name = "skilldo"
version = "0.5.11"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
async-trait = "0.1"
auth-git2 = "0.5"
base64 = "0.22"
boreal = "1.1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
git2 = "0.20"
libgit2-sys = { version = "0.18", features = ["vendored"] }
once_cell = "1"
open = "5"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
llmposter = "0.4.2"
mockito = "1"
serial_test = "3"

[profile.release]
overflow-checks = true
